inserção dos textos
Feito a inserção dos textos e, organização e padronização de fontes

--- a/index.html
+++ b/index.html
@@ -1,53 +1,185 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/index.css">
-    <link rel="stylesheet" href="./css/mobile.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/index.css" />
+    <link rel="stylesheet" href="./css/mobile.css" />
+    <link rel="stylesheet" href="./css/fonts.css" />
     <title>Inicio</title>
-</head>
-<body>
-    <header></header>
+  </head>
+  <body>
+    <header>
+      <ul>
+        <li><a href="">Inicio</a></li>
+        <li><a href="">Sobre</a></li>
+        <li><a href="">Serviços</a></li>
+        <li><a href="">Trabalhos</a></li>
+        <li><a href="">Demonstração</a></li>
+        <li><a href="">Contato</a></li>
+      </ul>
+    </header>
     <div class="space_01"></div>
     <div class="imagem_home"></div>
     <div class="space_02"></div>
     <div class="about">
-            <div class="text_about"></div>
-            <div class="picture_about"></div>
+      <div class="text_about">
+        <p class="text_about_1">
+          Já pensou se você pudesse resolver qualquer problema no seu computador
+          de forma rápida, segura e sem dor de cabeça? Nós já, e é exatamente
+          isso que fazemos todos os dias.
+        </p>
+        <p class="text_about_2">
+          Há mais de 15 anos, somos referência em notebooks seminovos com
+          procedência, qualidade e garantia de 6 meses. Trabalhamos com
+          equipamentos revisados, prontos para uso, e oferecemos suporte técnico
+          de verdade, para que você tenha segurança em cada etapa da sua compra.
+          Atendemos empresas e profissionais que valorizam performance, economia
+          e confiança na hora de investir em tecnologia.
+        </p>
+      </div>
+      <div class="picture_about"></div>
     </div>
     <div class="space_02"></div>
     <div class="services">
-        <div class="service_01">
-            <div class="img_service_1"></div>
-            <div class="text_service_1"></div>
+      <div class="service_left">
+        <div class="img_service_1"></div>
+        <div class="text_service_1">
+          <h1>Venda</h1>
+          <p>
+            Trabalhamos com notebooks e desktops novos e seminovos, todos com
+            procedência garantida, testados e prontos para uso imediato. Nossa
+            prioridade é oferecer equipamentos que unam qualidade, economia e
+            desempenho, atendendo desde usuários domésticos até empresas que
+            precisam de soluções confiáveis. Assim, você leva para casa ou para
+            sua empresa um computador com garantia e suporte especializado.
+          </p>
         </div>
-        <div class="space_03"></div>
-        <div class="service_02">
-            <div class="img_service_2"></div>
-            <div class="text_service_2"></div>
+      </div>
+      <div class="space_03"></div>
+      <div class="service_right">
+        <div class="text_service_2">
+          <h1 class="serv_right">Manutenção</h1>
+          <p>
+            Realizamos desde formatações até reparos completos em computadores e
+            notebooks, garantindo que cada equipamento volte a ter rapidez,
+            estabilidade e segurança. Nosso serviço de manutenção inclui remoção
+            de vírus, otimização do sistema, substituição de peças defeituosas e
+            muito mais. O objetivo é prolongar a vida útil do seu computador e
+            devolver o desempenho que você precisa no dia a dia.
+          </p>
         </div>
-        <div class="space_03"></div>
-        <div class="service_03">
-            <div class="img_service_3"></div>
-            <div class="text_service_3"></div>
+        <div class="img_service_2"></div>
+      </div>
+      <div class="space_03"></div>
+      <div class="service_left">
+        <div class="img_service_1"></div>
+        <div class="text_service_1">
+          <h1>Atendimento</h1>
+          <p>
+            Nosso atendimento é especializado e pensado para entender as reais
+            necessidades de cada cliente, seja pessoa física ou empresa.
+            Oferecemos soluções ágeis, personalizadas e confiáveis, sempre com
+            foco em resolver o problema de forma definitiva. Aqui, cada cliente
+            é tratado com atenção e respeito, recebendo suporte rápido e de
+            qualidade.
+          </p>
         </div>
+      </div>
+      <div class="space_03"></div>
+      <div class="service_right">
+        <div class="text_service_2">
+          <h1 class="serv_right">Upgrade</h1>
+          <p>
+            Se o seu computador está lento ou já não acompanha suas
+            necessidades, temos a solução: oferecemos troca e instalação de
+            peças para realizar upgrades seguros e eficientes. Seja memória RAM,
+            HD, SSD, placa de vídeo ou outros componentes, garantimos que seu
+            equipamento tenha desempenho muito superior, adequado às suas
+            demandas de trabalho, estudo ou lazer.
+          </p>
+        </div>
+        <div class="img_service_2"></div>
+      </div>
+      <div class="space_03"></div>
+      <div class="service_left">
+        <div class="img_service_1"></div>
+        <div class="text_service_1">
+          <h1>Suporte</h1>
+          <p>
+            Contamos com um suporte técnico personalizado, que pode ser agendado
+            para oferecer ainda mais praticidade. Nossa equipe está preparada
+            para identificar e solucionar problemas de forma rápida, evitando
+            perda de tempo e garantindo que você tenha seu equipamento
+            funcionando quando mais precisa. Oferecemos suporte tanto presencial
+            quanto remoto, conforme a necessidade.
+          </p>
+        </div>
+      </div>
+      <div class="space_03"></div>
+      <div class="service_right">
+        <div class="text_service_2">
+          <h1 class="serv_right">Entrega</h1>
+          <p>
+            Para sua maior comodidade, disponibilizamos produtos para retirada
+            imediata na loja ou envio rápido até você. Trabalhamos para que sua
+            experiência de compra seja prática e sem complicações, garantindo
+            agilidade na entrega e segurança no transporte. Assim, você recebe
+            seu produto com tranquilidade e dentro do prazo.
+          </p>
+        </div>
+        <div class="img_service_2"></div>
+      </div>
     </div>
     <div class="space_02"></div>
     <div class="jobs">
-        <div class="text_jobs"></div>
-        <div class="space_03"></div>
-        <div class="pictures_jobs"></div>
+      <div class="text_jobs">
+        <h1>Onde estamos:</h1>
+        <p>
+          Nossos produtos e serviços são desenvolvidos com base em conhecimento
+          técnico, inovação e dedicação. Trabalhamos para oferecer soluções que
+          unem qualidade, confiança e eficiência, sempre pensando em facilitar a
+          sua vida e garantir os melhores resultados.
+        </p>
+      </div>
+      <div class="space_03"></div>
+      <div class="pictures_jobs"></div>
     </div>
     <div class="space_02"></div>
     <div class="demonstration">
-        <div class="text_demo"></div>
+      <div class="text_demo">
+        <p>
+          Descubra as soluções que temos para deixar seu computador mais rápido,
+          seguro e eficiente. Se preferir, fale com a gente e vamos juntos
+          encontrar a melhor forma de resolver seu problema e atender às suas
+          necessidades.
+        </p>
+      </div>
     </div>
     <div class="space_02"></div>
     <div class="final_infos">
-        <div class="logotipo_footer"></div>
-        <div class="contact"></div>
+      <div class="logotipo_footer"></div>
+      <div class="nav_footer">
+        <ul class="nav_down">
+          <li><a href="">INICIO</a></li>
+          <li><a href="">SOBRE</a></li>
+          <li><a href="">SERVIÇOS</a></li>
+          <li><a href="">TRABALHOS</a></li>
+          <li><a href="">DEMONSTRAÇÃO</a></li>
+          <li><a href="">CONTATO</a></li>
+        </ul>
+      </div>
+      <div class="contact">
+        <h1>CONTATO</h1>
+        <p>(19) 9 9999-9999</p>
+        <p>contato@contato.com.br</p>
+      </div>
     </div>
-    <footer></footer>
-</body>
+    <footer>
+      <p>
+        © MAVO MEDIA. Todos os direitos reservados. Comunicação criativa que
+        move ideias.
+      </p>
+    </footer>
+  </body>
 </html>
