--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="./css/index.css" />
     <link rel="stylesheet" href="./css/mobile.css" />
     <link rel="stylesheet" href="./css/fonts.css" />
+    <link rel="stylesheet" href="./css/fonts.css" />
     <title>Inicio</title>
   </head>
   <body>
@@ -176,9 +177,8 @@
       </div>
     </div>
     <footer>
-      <p>
-        © MAVO MEDIA. Todos os direitos reservados. Comunicação criativa que
-        move ideias.
+      <p class="direitos_footer">
+        © 2025 MAVO MEDIA – Todos os direitos reservados.
       </p>
     </footer>
   </body>
