inserção de imagens
colocando todas as imagens e logotipos e configurando pra mobile e web

--- a/index.html
+++ b/index.html
@@ -10,19 +10,29 @@
     <title>Inicio</title>
   </head>
   <body>
-    <header>
-      <ul>
-        <li><a href="">Inicio</a></li>
-        <li><a href="">Sobre</a></li>
-        <li><a href="">Serviços</a></li>
-        <li><a href="">Trabalhos</a></li>
-        <li><a href="">Demonstração</a></li>
-        <li><a href="">Contato</a></li>
-      </ul>
-    </header>
+    <div class="back_header">
+      <header>
+        <div class="img_logo_horizontal">
+          <img
+            class="img_logo_1"
+            src="./inserts/logotipo/Prancheta 7.png"
+            alt=""
+          />
+        </div>
+        <ul>
+          <li><a href="">Inicio</a></li>
+          <li><a href="">Sobre</a></li>
+          <li><a href="">Serviços</a></li>
+          <li><a href="">Trabalhos</a></li>
+          <li><a href="">Demonstração</a></li>
+          <li><a href="">Contato</a></li>
+        </ul>
+      </header>
+    </div>
+    <div class="imagem_home">
+      <img class="img_home" src="./inserts/img_web/suporte.jpg" alt="" />
+    </div>
     <div class="space_01"></div>
-    <div class="imagem_home"></div>
-    <div class="space_02"></div>
     <div class="about">
       <div class="text_about">
         <p class="text_about_1">
@@ -39,100 +49,163 @@
           e confiança na hora de investir em tecnologia.
         </p>
       </div>
-      <div class="picture_about"></div>
+      <div class="picture_about">
+        <img class="img_about" src="./inserts/img_web/vendas.jpg" alt="" />
+      </div>
     </div>
-    <div class="space_02"></div>
-    <div class="services">
-      <div class="service_left">
-        <div class="img_service_1"></div>
+    <div class="space_01"></div>
+    <div class="serv_geral">
+      <div class="services_left">
+        <div class="img_service_1">
+          <img class="img_serv_1" src="./inserts/img_web/vendas.jpg" alt="" />
+        </div>
         <div class="text_service_1">
           <h1>Venda</h1>
           <p>
             Trabalhamos com notebooks e desktops novos e seminovos, todos com
-            procedência garantida, testados e prontos para uso imediato. Nossa
-            prioridade é oferecer equipamentos que unam qualidade, economia e
-            desempenho, atendendo desde usuários domésticos até empresas que
-            precisam de soluções confiáveis. Assim, você leva para casa ou para
-            sua empresa um computador com garantia e suporte especializado.
+            procedência garantida, revisados e testados por nossa equipe técnica
+            para que estejam prontos para uso imediato. Nosso compromisso é
+            oferecer equipamentos que unem qualidade, economia e desempenho,
+            atendendo desde usuários domésticos e estudantes até empresas que
+            precisam de soluções confiáveis para o dia a dia. Cada computador é
+            cuidadosamente selecionado e preparado para entregar segurança,
+            durabilidade e alta performance.
+          </p>
+          <p class="text_about_2">
+            Além disso, oferecemos garantia e suporte especializado, para que
+            você tenha sempre tranquilidade e confiança na hora de utilizar seu
+            equipamento.
           </p>
         </div>
       </div>
       <div class="space_03"></div>
-      <div class="service_right">
+      <div class="services_right">
         <div class="text_service_2">
           <h1 class="serv_right">Manutenção</h1>
           <p>
-            Realizamos desde formatações até reparos completos em computadores e
-            notebooks, garantindo que cada equipamento volte a ter rapidez,
-            estabilidade e segurança. Nosso serviço de manutenção inclui remoção
-            de vírus, otimização do sistema, substituição de peças defeituosas e
-            muito mais. O objetivo é prolongar a vida útil do seu computador e
-            devolver o desempenho que você precisa no dia a dia.
+            Realizamos desde formatações básicas até reparos completos em
+            computadores e notebooks, garantindo que cada equipamento volte a
+            oferecer rapidez, estabilidade e segurança. Nossos serviços de
+            manutenção englobam remoção de vírus, otimização do sistema,
+            substituição de peças defeituosas, limpeza interna preventiva e
+            diversas outras soluções que asseguram o bom funcionamento do seu
+            dispositivo. Cada atendimento é feito com atenção e conhecimento
+            técnico, buscando sempre prolongar a vida útil da máquina e evitar
+            problemas futuros.
+          </p>
+          <p class="text_about_2">
+            Com isso, devolvemos ao seu computador o desempenho que você precisa
+            no dia a dia, seja para estudar, trabalhar ou se divertir com
+            tranquilidade.
           </p>
         </div>
-        <div class="img_service_2"></div>
+        <div class="img_service_2">
+          <img
+            class="img_serv_2"
+            src="./inserts/img_web/manutencao.jpg"
+            alt=""
+          />
+        </div>
       </div>
       <div class="space_03"></div>
-      <div class="service_left">
-        <div class="img_service_1"></div>
+      <div class="services_left">
+        <div class="img_service_1">
+          <img
+            class="img_serv_1"
+            src="./inserts/img_web/atendimento.jpg"
+            alt=""
+          />
+        </div>
         <div class="text_service_1">
           <h1>Atendimento</h1>
           <p>
-            Nosso atendimento é especializado e pensado para entender as reais
-            necessidades de cada cliente, seja pessoa física ou empresa.
-            Oferecemos soluções ágeis, personalizadas e confiáveis, sempre com
-            foco em resolver o problema de forma definitiva. Aqui, cada cliente
-            é tratado com atenção e respeito, recebendo suporte rápido e de
-            qualidade.
+            Nosso atendimento é especializado e voltado para compreender as
+            reais necessidades de cada cliente, seja pessoa física ou empresa.
+            Buscamos identificar não apenas o problema imediato, mas também
+            oferecer soluções que tragam mais eficiência, segurança e
+            praticidade no uso diário da tecnologia. Trabalhamos com seriedade e
+            dedicação para entregar um serviço que faça diferença de verdade.
+          </p>
+          <p class="text_about_2">
+            Cada cliente é tratado com atenção e respeito, recebendo suporte
+            rápido, personalizado e de qualidade. Nosso foco é resolver de forma
+            definitiva, garantindo confiança e tranquilidade em cada
+            atendimento.
           </p>
         </div>
       </div>
       <div class="space_03"></div>
-      <div class="service_right">
+      <div class="services_right">
         <div class="text_service_2">
           <h1 class="serv_right">Upgrade</h1>
           <p>
             Se o seu computador está lento ou já não acompanha suas
-            necessidades, temos a solução: oferecemos troca e instalação de
-            peças para realizar upgrades seguros e eficientes. Seja memória RAM,
-            HD, SSD, placa de vídeo ou outros componentes, garantimos que seu
-            equipamento tenha desempenho muito superior, adequado às suas
-            demandas de trabalho, estudo ou lazer.
+            necessidades, nós temos a solução certa. Realizamos a troca e
+            instalação de peças para garantir upgrades seguros e eficientes,
+            sempre utilizando componentes de qualidade que proporcionam maior
+            desempenho e confiabilidade. Seja para aumentar memória RAM,
+            instalar um SSD, substituir HDs, placas de vídeo ou outros itens,
+            nossa equipe faz todo o processo de forma cuidadosa para que você
+            tenha uma máquina renovada.
+          </p>
+          <p class="text_about_2">
+            Dessa forma, seu equipamento passa a oferecer velocidade,
+            estabilidade e potência muito superiores, adequadas às suas demandas
+            de estudo, trabalho, jogos ou lazer, sem a necessidade de investir
+            em um computador novo.
           </p>
         </div>
-        <div class="img_service_2"></div>
+        <div class="img_service_2">
+          <img class="img_serv_2" src="./inserts/img_web/upgrade.jpg" alt="" />
+        </div>
       </div>
       <div class="space_03"></div>
-      <div class="service_left">
-        <div class="img_service_1"></div>
+      <div class="services_left">
+        <div class="img_service_1">
+          <img class="img_serv_2" src="./inserts/img_web/suporte.jpg" alt="" />
+        </div>
         <div class="text_service_1">
           <h1>Suporte</h1>
           <p>
-            Contamos com um suporte técnico personalizado, que pode ser agendado
-            para oferecer ainda mais praticidade. Nossa equipe está preparada
-            para identificar e solucionar problemas de forma rápida, evitando
-            perda de tempo e garantindo que você tenha seu equipamento
-            funcionando quando mais precisa. Oferecemos suporte tanto presencial
-            quanto remoto, conforme a necessidade.
+            Contamos com um suporte técnico personalizado, pensado para trazer
+            mais praticidade ao seu dia a dia. Nossa equipe é preparada para
+            identificar e solucionar problemas de forma precisa, evitando
+            transtornos e garantindo que seu computador volte a funcionar como
+            deveria. Além disso, você pode agendar o atendimento conforme sua
+            disponibilidade, tornando todo o processo mais simples e organizado.
+          </p>
+          <p class="text_about_2">
+            Disponibilizamos suporte tanto presencial quanto remoto, de acordo
+            com a sua necessidade. Assim, você tem a tranquilidade de contar com
+            especialistas que resolvem de forma rápida e eficiente, mantendo seu
+            equipamento sempre em boas condições.a
           </p>
         </div>
       </div>
       <div class="space_03"></div>
-      <div class="service_right">
+      <div class="services_right">
         <div class="text_service_2">
           <h1 class="serv_right">Entrega</h1>
           <p>
-            Para sua maior comodidade, disponibilizamos produtos para retirada
-            imediata na loja ou envio rápido até você. Trabalhamos para que sua
-            experiência de compra seja prática e sem complicações, garantindo
-            agilidade na entrega e segurança no transporte. Assim, você recebe
-            seu produto com tranquilidade e dentro do prazo.
+            Para sua maior comodidade, oferecemos opções de retirada imediata em
+            loja ou envio direto até você. Nosso objetivo é proporcionar uma
+            experiência de compra prática e sem complicações, onde cada etapa é
+            pensada para facilitar sua vida. Trabalhamos com agilidade e
+            segurança no transporte, garantindo que seu produto chegue em
+            perfeito estado.
+          </p>
+          <p class="text_about_2">
+            Com isso, você recebe seu equipamento com toda a confiança de quem
+            se preocupa em entregar não apenas tecnologia, mas também
+            tranquilidade e satisfação.
           </p>
         </div>
-        <div class="img_service_2"></div>
+        <div class="img_service_2">
+          <img class="img_serv_2" src="./inserts/img_web/entrega.jpg" alt="" />
+        </div>
       </div>
     </div>
-    <div class="space_02"></div>
+    <div class="space_01"></div>
     <div class="jobs">
       <div class="text_jobs">
         <h1>Onde estamos:</h1>
@@ -158,22 +231,30 @@
       </div>
     </div>
     <div class="space_02"></div>
-    <div class="final_infos">
-      <div class="logotipo_footer"></div>
-      <div class="nav_footer">
-        <ul class="nav_down">
-          <li><a href="">INICIO</a></li>
-          <li><a href="">SOBRE</a></li>
-          <li><a href="">SERVIÇOS</a></li>
-          <li><a href="">TRABALHOS</a></li>
-          <li><a href="">DEMONSTRAÇÃO</a></li>
-          <li><a href="">CONTATO</a></li>
-        </ul>
-      </div>
-      <div class="contact">
-        <h1>CONTATO</h1>
-        <p>(19) 9 9999-9999</p>
-        <p>contato@contato.com.br</p>
+    <div class="back_final">
+      <div class="final_infos">
+        <div class="logotipo_footer">
+          <img
+            class="img_logo_2"
+            src="./inserts/logotipo/Prancheta 8.png"
+            alt=""
+          />
+        </div>
+        <div class="nav_footer">
+          <ul class="nav_down">
+            <li><a href="">INICIO</a></li>
+            <li><a href="">SOBRE</a></li>
+            <li><a href="">SERVIÇOS</a></li>
+            <li><a href="">TRABALHOS</a></li>
+            <li><a href="">DEMONSTRAÇÃO</a></li>
+            <li><a href="">CONTATO</a></li>
+          </ul>
+        </div>
+        <div class="contact">
+          <h1>CONTATO</h1>
+          <p>(19) 9 9999-9999</p>
+          <p>contato@contato.com.br</p>
+        </div>
       </div>
     </div>
     <footer>
